src/B/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> comando
Rule 2     comando -> ESCREVER LPAREN expressao RPAREN
Rule 3     expressao -> expressao PLUS expressao
Rule 4     expressao -> expressao MINUS expressao
Rule 5     expressao -> LPAREN expressao RPAREN
Rule 6     expressao -> NUMERO
Rule 7     expressao -> STRING
Rule 8     expressao -> CARACTER_ESPECIAL
Rule 9     expressao -> CARACTER_ACENTUADO

Terminals, with rules where they appear

CARACTER_ACENTUADO   : 9
CARACTER_ESPECIAL    : 8
ESCREVER             : 2
LPAREN               : 2 5
MINUS                : 4
NUMERO               : 6
PLUS                 : 3
RPAREN               : 2 5
STRING               : 7
error                : 

Nonterminals, with rules where they appear

S                    : 0
comando              : 1
expressao            : 2 3 3 4 4 5

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . comando
    (2) comando -> . ESCREVER LPAREN expressao RPAREN

    ESCREVER        shift and go to state 3

    S                              shift and go to state 1
    comando                        shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> comando .

    $end            reduce using rule 1 (S -> comando .)


state 3

    (2) comando -> ESCREVER . LPAREN expressao RPAREN

    LPAREN          shift and go to state 4


state 4

    (2) comando -> ESCREVER LPAREN . expressao RPAREN
    (3) expressao -> . expressao PLUS expressao
    (4) expressao -> . expressao MINUS expressao
    (5) expressao -> . LPAREN expressao RPAREN
    (6) expressao -> . NUMERO
    (7) expressao -> . STRING
    (8) expressao -> . CARACTER_ESPECIAL
    (9) expressao -> . CARACTER_ACENTUADO

    LPAREN          shift and go to state 5
    NUMERO          shift and go to state 7
    STRING          shift and go to state 8
    CARACTER_ESPECIAL shift and go to state 9
    CARACTER_ACENTUADO shift and go to state 10

    expressao                      shift and go to state 6

state 5

    (5) expressao -> LPAREN . expressao RPAREN
    (3) expressao -> . expressao PLUS expressao
    (4) expressao -> . expressao MINUS expressao
    (5) expressao -> . LPAREN expressao RPAREN
    (6) expressao -> . NUMERO
    (7) expressao -> . STRING
    (8) expressao -> . CARACTER_ESPECIAL
    (9) expressao -> . CARACTER_ACENTUADO

    LPAREN          shift and go to state 5
    NUMERO          shift and go to state 7
    STRING          shift and go to state 8
    CARACTER_ESPECIAL shift and go to state 9
    CARACTER_ACENTUADO shift and go to state 10

    expressao                      shift and go to state 11

state 6

    (2) comando -> ESCREVER LPAREN expressao . RPAREN
    (3) expressao -> expressao . PLUS expressao
    (4) expressao -> expressao . MINUS expressao

    RPAREN          shift and go to state 12
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14


state 7

    (6) expressao -> NUMERO .

    RPAREN          reduce using rule 6 (expressao -> NUMERO .)
    PLUS            reduce using rule 6 (expressao -> NUMERO .)
    MINUS           reduce using rule 6 (expressao -> NUMERO .)


state 8

    (7) expressao -> STRING .

    RPAREN          reduce using rule 7 (expressao -> STRING .)
    PLUS            reduce using rule 7 (expressao -> STRING .)
    MINUS           reduce using rule 7 (expressao -> STRING .)


state 9

    (8) expressao -> CARACTER_ESPECIAL .

    RPAREN          reduce using rule 8 (expressao -> CARACTER_ESPECIAL .)
    PLUS            reduce using rule 8 (expressao -> CARACTER_ESPECIAL .)
    MINUS           reduce using rule 8 (expressao -> CARACTER_ESPECIAL .)


state 10

    (9) expressao -> CARACTER_ACENTUADO .

    RPAREN          reduce using rule 9 (expressao -> CARACTER_ACENTUADO .)
    PLUS            reduce using rule 9 (expressao -> CARACTER_ACENTUADO .)
    MINUS           reduce using rule 9 (expressao -> CARACTER_ACENTUADO .)


state 11

    (5) expressao -> LPAREN expressao . RPAREN
    (3) expressao -> expressao . PLUS expressao
    (4) expressao -> expressao . MINUS expressao

    RPAREN          shift and go to state 15
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14


state 12

    (2) comando -> ESCREVER LPAREN expressao RPAREN .

    $end            reduce using rule 2 (comando -> ESCREVER LPAREN expressao RPAREN .)


state 13

    (3) expressao -> expressao PLUS . expressao
    (3) expressao -> . expressao PLUS expressao
    (4) expressao -> . expressao MINUS expressao
    (5) expressao -> . LPAREN expressao RPAREN
    (6) expressao -> . NUMERO
    (7) expressao -> . STRING
    (8) expressao -> . CARACTER_ESPECIAL
    (9) expressao -> . CARACTER_ACENTUADO

    LPAREN          shift and go to state 5
    NUMERO          shift and go to state 7
    STRING          shift and go to state 8
    CARACTER_ESPECIAL shift and go to state 9
    CARACTER_ACENTUADO shift and go to state 10

    expressao                      shift and go to state 16

state 14

    (4) expressao -> expressao MINUS . expressao
    (3) expressao -> . expressao PLUS expressao
    (4) expressao -> . expressao MINUS expressao
    (5) expressao -> . LPAREN expressao RPAREN
    (6) expressao -> . NUMERO
    (7) expressao -> . STRING
    (8) expressao -> . CARACTER_ESPECIAL
    (9) expressao -> . CARACTER_ACENTUADO

    LPAREN          shift and go to state 5
    NUMERO          shift and go to state 7
    STRING          shift and go to state 8
    CARACTER_ESPECIAL shift and go to state 9
    CARACTER_ACENTUADO shift and go to state 10

    expressao                      shift and go to state 17

state 15

    (5) expressao -> LPAREN expressao RPAREN .

    RPAREN          reduce using rule 5 (expressao -> LPAREN expressao RPAREN .)
    PLUS            reduce using rule 5 (expressao -> LPAREN expressao RPAREN .)
    MINUS           reduce using rule 5 (expressao -> LPAREN expressao RPAREN .)


state 16

    (3) expressao -> expressao PLUS expressao .
    (3) expressao -> expressao . PLUS expressao
    (4) expressao -> expressao . MINUS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    RPAREN          reduce using rule 3 (expressao -> expressao PLUS expressao .)
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14

  ! PLUS            [ reduce using rule 3 (expressao -> expressao PLUS expressao .) ]
  ! MINUS           [ reduce using rule 3 (expressao -> expressao PLUS expressao .) ]


state 17

    (4) expressao -> expressao MINUS expressao .
    (3) expressao -> expressao . PLUS expressao
    (4) expressao -> expressao . MINUS expressao

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    RPAREN          reduce using rule 4 (expressao -> expressao MINUS expressao .)
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14

  ! PLUS            [ reduce using rule 4 (expressao -> expressao MINUS expressao .) ]
  ! MINUS           [ reduce using rule 4 (expressao -> expressao MINUS expressao .) ]

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLUS in state 16 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 16 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 17 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 17 resolved as shift
